<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest User</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="our_mission"></string>

    <string name="app_name">SHS Mobile</string>
    <string name="home">Home</string>
    <string name="grade_calculator">Grade Calculator</string>
    <string name="notifications">Notifications</string>
    <string name="schedule">Schedule</string>
    <string name="notif_time">Notification Time</string>
    <string name="daily_notif">Daily Notifications</string>
    <string name="save">Save changes</string>
    <string name="q1">Q1 Grade (20%):</string>
    <string name="q2">Q2 Grade (20%):</string>
    <string name="q3">Q3 Grade (20%):</string>
    <string name="q4">Q4 Grade (20%):</string>
    <string name="mt">Midterm Grade (8%):</string>
    <string name="fn">Final Grade (12%):</string>
    <string name="final_grade">Final Grade:</string>
    <string name="calculate_grade">Calculate</string>
    <string-array name="bell_types">
        <item>Normal Period Schedule</item>
        <item>2 Hour Delay Schedule</item>
    </string-array>
    <string name="p1Label">1</string>
    <string name="p1Time">7:39 – 8:19</string>
    <string name="p2Label">2</string>
    <string name="p2Time">8:24 – 9:07</string>
    <string name="p3Label">3</string>
    <string name="p3Time">9:12 – 9:52</string>
    <string name="p4Label">4</string>
    <string name="p4Time">9:57 – 10:37</string>
    <string name="p5Label">5</string>
    <string name="p5Time">10:42 – 11:22</string>
    <string name="p6Label">6</string>
    <string name="p6Time">11:27 – 12:07</string>
    <string name="p7Label">7</string>
    <string name="p7Time">12:12 – 12:52</string>
    <string name="p8Label">8</string>
    <string name="p8Time">12:57 – 1:37</string>
    <string name="p9Label">9</string>
    <string name="p9Time">1:41 – 2:21</string>
    <string name="p1Time2">9:39 – 10:05</string>
    <string name="p2Time2">10:10 – 10:40</string>
    <string name="p3Time2">10:45 – 11:11</string>
    <string name="p4Time2">11:16 – 11:43</string>
    <string name="p5Time2">11:48 – 12:15</string>
    <string name="p6Time2">12:20 – 12:47</string>
    <string name="p7Time2">12:52 – 1:19</string>
    <string name="p8Time2">1:24 – 1:50</string>
    <string name="p9Time2">1:55 – 2:21</string>
    <string name="action_settings">Settings</string>
</resources>
