<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_grade_calculator"
            android:icon="@drawable/ic_nav_grade_calculator"
            android:title="@string/grade_calculator" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_nav_notifications"
            android:title="@string/notifications" /> <!--TODO move notifications to top where settings would also go-->
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_nav_schedule"
            android:title="@string/schedule" />
    </group>

</menu>
