<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="31dp"
    android:paddingRight="31dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.syosseths.shsmobile.MainActivity">


    <TextView
        android:id="@+id/bellTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/Schedule"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="normal|bold" />

    <Spinner
        android:id="@+id/spinner_bellschedules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-8dp"
        android:entries="@array/bell_types"
        android:paddingBottom="15dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/p1Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p1Label"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p1Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:text="@string/p1Time"
                android:textColor="#000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/p2Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2Label"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p2Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:text="@string/p2Time"
                android:textColor="#000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/p3Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p3Label"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p3Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:text="@string/p3Time"
                android:textColor="#000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/p4Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p4Label"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p4Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:text="@string/p4Time"
                android:textColor="#000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/p5Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p5Label"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p5Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:text="@string/p5Time"
                android:textColor="#000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/p6Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p6Label"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p6Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:text="@string/p6Time"
                android:textColor="#000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/p7Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p7Label"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p7Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:text="@string/p7Time"
                android:textColor="#000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/p8Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p8Label"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p8Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:text="@string/p8Time"
                android:textColor="#000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/p9Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p9Label"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p9Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:text="@string/p9Time"
                android:textColor="#000"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>
